--- a/scene.org
+++ b/scene.org
@@ -13,9 +13,8 @@
 ** DONE 用户编辑场景描述，场景名
 ** DONE Index页面
 ** DONE 用户主页
-** 分页
-** 实现layout功能
-** 主色彩yellow
+** DONE 实现layout功能
+** DONE 主色彩dun
 ** 后台管理
 ** 预防外部脚本注入
 ** 创建应用自带的Guest用户
@@ -23,4 +22,4 @@
 ** 根据路由加载中间件
 ** 修复各类bug
 ** 将项目部署到heroku
-
+** 分页
