--- a/scene.org
+++ b/scene.org
@@ -15,11 +15,11 @@
 ** DONE 用户主页
 ** DONE 实现layout功能
 ** DONE 主色彩dun
-** 后台管理
+** DONE 修复各类bug   
 ** 预防外部脚本注入
+** 将项目部署到heroku
+** 后台管理
 ** 创建应用自带的Guest用户
 ** 项目安全评估
 ** 根据路由加载中间件
-** 修复各类bug
-** 将项目部署到heroku
 ** 分页
