--- a/scene.org
+++ b/scene.org
@@ -18,7 +18,8 @@
 ** DONE 修复各类bug   
 ** DONE 我创建场景
 ** DONE 预防外部脚本注入
-** TODO 将项目部署到heroku
+** TODO 开发，测试，生产环境
+** 将项目部署到heroku
 ** 后台管理
 ** 创建应用自带的Guest用户
 ** 项目安全评估
