--- a/contest.org
+++ b/contest.org
@@ -1,11 +1,11 @@
 * 比赛
 ** DIY创建比赛
 *** DONE contests表
-*** 比赛类别
-*** 比赛图片
+*** DONE 比赛类别
+*** DONE 比赛图片
 *** 显示比赛
-** 创建赞助商
-** 赞助比赛
+** DONE 创建赞助商
+** DONE 赞助比赛
 ** 用户权限管理
 ** 比赛管理
 ** 网站整体数据
