--- a/scene.org
+++ b/scene.org
@@ -18,8 +18,10 @@
 ** DONE 修复各类bug   
 ** DONE 我创建场景
 ** DONE 预防外部脚本注入
-** TODO 开发，测试，生产环境
+** TODO 支持开发，测试，生产等不同环境
+** 支持开发，测试，生产等不同数据库
 ** 将项目部署到heroku
+** 将项目部署到京东
 ** 后台管理
 ** 创建应用自带的Guest用户
 ** 项目安全评估
